Bug 60610 - Some windows appear to have larger input reigons then they appear
Summary: Some windows appear to have larger input reigons then they appear
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-10 20:29 UTC by nerdopolis1
Modified: 2013-02-15 02:57 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description nerdopolis1 2013-02-10 20:29:40 UTC
It seems that mostly with xwayland windows, and with the nested compositor (compositor-wayland) that the input regions expand a good number of pixels past the visible output of the window.

I can see this, as if I have an xwayland window in the foreground, which is overlapping another window, and I try to activate the window near the border of the active xwayland window, the window stays active, until I move the cursor further away from the border, I can finally activate it.
Comment 1 Kristian Høgsberg 2013-02-15 02:57:59 UTC
Indeed, we failed to set the input region correctly, and the drop shadow was considered part of the surface input region.

commit d8b617deea3ec46b70ef4ab4cc09c9f5cf4b45ca
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Thu Feb 14 21:56:32 2013 -0500

    xwm: Fix input region regression from commit changes
    
    This must be the last regression from the surface commit changes.  We
    need to set the pending.input region, otherwise the region will be
    overwritten on commit.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=60610


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.